--- a/game/imaginarium/public/pole.html
+++ b/game/imaginarium/public/pole.html
@@ -1,7 +1,32 @@
+﻿<html>
+
+<head>
+    <title>Login Here</title>
+    <link rel="stylesheet" href="../../../public/bootstrap.min.css" >
+    <link rel="stylesheet" href="../../../public/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="../../../public/js/jquery-1.12.4.js"></script>
+    <script src="../../../public/js/jquery-ui.js"></script>
+
+<!--  <script type="text/javascript" src="../../../public/js/YConsole-compiled.js"></script>
+    <script type="text/javascript">
+           YConsole.activate();
+           console.log("first intercepted log.");
+           YConsole.docking="bottom";
+           YConsole.show();
+    </script>
+-->
+    <script type="application/javascript" src="pole.js"></script>
+</head>
+
+<body class="container">
+
 <style type="text/css">body{margin: 0;padding: 0;}</style>
 <div id="poleGame" style="margin: 0 auto; width: 1819px;">
 </div>
 <div id="waitGwin" style="position:absolute;z-index:1000;left:0;top:0; background:black; height:1000px;opacity: 0.8;width: 100%;">
     <div style="color: white;font-size: 40pt;margin: 0 auto;padding: 300px;text-align: center;width: 500px;">Ожидание игроков!!</div>
 </div>
-<script type="application/javascript" src="pole.js"></script>
+</body>
+
+</html>
