--- a/game/imaginarium/public/pole.html
+++ b/game/imaginarium/public/pole.html
@@ -138,6 +138,9 @@ label{
             <div id="errorPlacetransferDevice" style="padding:10px;color:red;"></div>
         </div>
     </div>
+	<div id="win" style="position:absolute;z-index:2002; background:black;opacity: 0.8;float:left;display:none">
+        <div style="padding-top:5%;" class="winBlock"><span class = "displayed" ><label> </label><span class="placeAssotiation"></span><a href="#" id="winBut" class="button9 readyButton" style="font-size:13px;margin-left:7px;display:none;">Ready</a></span></div>
+    </div>
 </div>
 
 </body>
