--- a/game/imaginarium/public/pole.html
+++ b/game/imaginarium/public/pole.html
@@ -96,7 +96,7 @@ label{
 		    <div id="playerPanel" style="padding-right:30px">
 			    <div align="right" class="playerField">Введите имя <span class="numPlayer">1</span> игрока: <input class="namePlayer" type="text" size="15" style="background:black; color:#FFFFFF;font-size:10px;"/><span class="passPanel" style="display:none;"> пароль: <input class="passPlayer" type="password" size="15" style="background:black; color:#FFFFFF;font-size:10px;"/><span></div>
 		    </div>
-			<div style='display:none;'>Добавить набор запутывания: <a href="#" id="minusSolt" class="button9 buttonsmall">-</a><span id="countSolts" style="padding:0 10px 0 10px">1</span><a href="#" id="plusSolt" class="button9 buttonsmall">+</a></div>
+			<div style="display:none;">Добавить набор запутывания: <a href="#" id="minusSolt" class="button9 buttonsmall">-</a><span id="countSolts" style="padding:0 10px 0 10px">1</span><a href="#" id="plusSolt" class="button9 buttonsmall">+</a></div>
             <div style="padding:20px;"><label style=" font-size:10px;"><input id="passSwitch" type="checkbox"> Включить пароли</label></div>
 		    <div style="padding:20px;"><a href="#" id="buttonStart" class="button9">Start</a></div>
 		    <div id="errorPlace" style="padding:10px;color:red;"></div>
