--- a/game/imaginarium/public/pole.html
+++ b/game/imaginarium/public/pole.html
@@ -2,11 +2,11 @@
 
 <head>
     <title>Login Here</title>
-    <link rel="stylesheet" href="../../../public/bootstrap.min.css" >
-    <link rel="stylesheet" href="../../../public/jquery-ui.css">
+    <link rel="stylesheet" href="../public/bootstrap.min.css" >
+    <link rel="stylesheet" href="../public/jquery-ui.css">
 <!--     <link rel="stylesheet" href="/resources/demos/style.css">-->
-    <script src="../../../public/js/jquery-3.4.1.min.js"></script>
-    <script src="../../../public/js/jquery-ui.js"></script>
+    <script src="../public/js/jquery-3.4.1.min.js"></script>
+    <script src="../public/js/jquery-ui.js"></script>
 
 <!--  <script type="text/javascript" src="../../../public/js/YConsole-compiled.js"></script>
     <script type="text/javascript">
