add name player

--- a/game/imaginarium/public/pole.html
+++ b/game/imaginarium/public/pole.html
@@ -98,6 +98,8 @@ passPlayer, namePlayer{
 #poleGame{margin: 0 auto;}
 </style>
 <div id="poleGame">
+	<div id="poleHelp" style="position:absolute;z-index:150000;float:left;">        
+    </div>
     <div id="waitGwin" style="display:none;position:absolute;z-index:1000;left:0;top:0; background:black; height:1000px;opacity: 0.8;width: 100%;">
         <div class="textMessage">Ожидание игроков!!</div>
     </div>	
