try set the right directory

--- a/public/gameroom.html
+++ b/public/gameroom.html
@@ -9,13 +9,13 @@
     <script src="js/jquery-ui.js"></script>
 
     <script type="text/javascript" src="js/YConsole-compiled.js"></script>
-    <script type="text/javascript">
+ <!--   <script type="text/javascript">
            YConsole.activate();
            console.log("first intercepted log.");
            YConsole.docking="bottom";
            YConsole.show();
-    </script>
-    <script type="application/javascript" src="pole.js"></script>
+    </script>-->
+    <script type="application/javascript" src="room.js"></script>
 </head>
 
 <body class="container">
