--- a/public/gameroom.html
+++ b/public/gameroom.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Login Here</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" >
     <link rel="stylesheet" href="/css/jquery-ui.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/jquery-3.4.1.min.js"></script>
