try set the right directory

--- a/game/imaginarium/public/pole.html
+++ b/game/imaginarium/public/pole.html
@@ -16,7 +16,7 @@
                YConsole.show();
         </script>
     -->
-	<script type="application/javascript" src="pole.js"></script>
+	<script type="application/javascript" src="poleimaginarium.js"></script>
 	<style type="text/css">
 body{
   margin: 0;padding: 0;
